Responsive for mobile devices

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
     <div class="hero-section">
         <div class="navigation">
             <div class="sakura-logo"><img src="./img/1_hero/PNG/sakura_logo.png"></div>
-            <div class="nav-container hide-mobile">
-
+            <div class="nav-container ">
+                <div class="nav-links">
                 <a href="#menu">MENU</a>
                 <a href="#locations">LOCATIONS</a>
                 <a href="#about">ABOUT</a>
+                </div>
                 <div class="phone-button">
                     <img src="./img/1_hero/PNG/phone.png">
                     <a href="tel:017654564534">0176 54564534</a>
@@ -142,7 +143,8 @@
 
     <div class="footer">
         <div class="footer-logo">
-            <img src="./img/5_section_footer/PNG/sakura_ramen_logo_and_text.png">
+            <img class="desktop-logo" src="./img/5_section_footer/PNG/sakura_ramen_logo_and_text.png">
+            <img class="mobile-logo" img src="./img/1_hero/PNG/sakura_logo.png">
         </div>
         <div class="social-logos">
             <a href="https://www.tripadvisor.de/" target="_blank">
