--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <div class="sakura-logo"><img src="./img/1_hero/PNG/sakura_logo.png"></div>
             <div class="nav-container ">
                 <div class="nav-links">
-                <a href="#menu">MENU</a>
-                <a href="#locations">LOCATIONS</a>
-                <a href="#about">ABOUT</a>
+                    <a href="#menu">MENU</a>
+                    <a href="#locations">LOCATIONS</a>
+                    <a href="#about">ABOUT</a>
                 </div>
                 <div class="phone-button">
                     <img src="./img/1_hero/PNG/phone.png">
@@ -62,66 +62,72 @@
         <div class="menu-items">
             <div class="menu-item">
                 <img src="./img/3_section_our_menu/Png/R1.png">
-                <table>
-                    <th>
-                        <h3>Tonkatsu Ramen</h3>
-                    </th>
-                    <tr>
-                        <td>CHICKEN</td>
-                        <td>11.95€</td>
-                    </tr>
-                    <tr>
-                        <td>BEEF</td>
-                        <td>12.95€</td>
-                    </tr>
-                    <tr>
-                        <td>SHRIMP</td>
-                        <td>13.95€</td>
-                    </tr>
-                </table>
+                <div style="overflow-x: auto;">
+                    <table>
+                        <th>
+                            <h3>Tonkatsu Ramen</h3>
+                        </th>
+                        <tr>
+                            <td>CHICKEN</td>
+                            <td>11.95€</td>
+                        </tr>
+                        <tr>
+                            <td>BEEF</td>
+                            <td>12.95€</td>
+                        </tr>
+                        <tr>
+                            <td>SHRIMP</td>
+                            <td>13.95€</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
 
             <div class="menu-item spicy-miso">
                 <img src="./img/3_section_our_menu/Png/R2.png">
-                <table>
-                    <th>
-                        <h3>Spicy Miso</h3>
-                    </th>
-                    <tr>
-                        <td>CHICKEN</td>
-                        <td>11.95€</td>
-                    </tr>
-                    <tr>
-                        <td>BEEF</td>
-                        <td>12.95€</td>
-                    </tr>
-                    <tr>
-                        <td>SHRIMP</td>
-                        <td>13.95€</td>
-                    </tr>
-                </table>
+                <div style="overflow-x: auto;">
+                    <table>
+                        <th>
+                            <h3>Spicy Miso Ramen</h3>
+                        </th>
+                        <tr>
+                            <td>CHICKEN</td>
+                            <td>11.95€</td>
+                        </tr>
+                        <tr>
+                            <td>BEEF</td>
+                            <td>12.95€</td>
+                        </tr>
+                        <tr>
+                            <td>SHRIMP</td>
+                            <td>13.95€</td>
+                        </tr>
+                    </table>
+                </div>
 
             </div>
 
             <div class="menu-item">
                 <img src="./img/3_section_our_menu/Png/R3.png">
-                <table>
-                    <th>
-                        <h3>Shio Ramen</h3>
-                    </th>
-                    <tr>
-                        <td>CHICKEN</td>
-                        <td>11.95€</td>
-                    </tr>
-                    <tr>
-                        <td>BEEF</td>
-                        <td>12.95€</td>
-                    </tr>
-                    <tr>
-                        <td>SHRIMP</td>
-                        <td>13.95€</td>
-                    </tr>
-                </table>
+                <div style="overflow-x: auto;">
+                    <table>
+                        <th>
+                            <h3>Shio Ramen</h3>
+                        </th>
+                        <tr>
+                            <td>CHICKEN</td>
+                            <td>11.95€</td>
+                        </tr>
+                        <tr>
+                            <td>BEEF</td>
+                            <td>12.95€</td>
+                        </tr>
+                        <tr>
+                            <td>SHRIMP</td>
+                            <td>13.95€</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
