--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <img src="./img/3_section_our_menu/Png/R1.png">
                 <div style="overflow-x: auto;">
                     <table>
-                        <th>
+                        <th colspan="2">
                             <h3>Tonkatsu Ramen</h3>
                         </th>
                         <tr>
@@ -87,7 +87,7 @@
                 <img src="./img/3_section_our_menu/Png/R2.png">
                 <div style="overflow-x: auto;">
                     <table>
-                        <th>
+                        <th colspan="2">
                             <h3>Spicy Miso Ramen</h3>
                         </th>
                         <tr>
@@ -111,7 +111,7 @@
                 <img src="./img/3_section_our_menu/Png/R3.png">
                 <div style="overflow-x: auto;">
                     <table>
-                        <th>
+                        <th colspan="2">
                             <h3>Shio Ramen</h3>
                         </th>
                         <tr>
